[project]
name = "cpe393-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperopt>=0.2.7",
    "ipykernel>=6.29.5",
    "mlflow>=2.21.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=78.1.0",
    "xgboost>=3.0.0",
]
